--- a/challenge3/docker/api/package.json
+++ b/challenge3/docker/api/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "mysql": "^2.18.1"
   }
