--- a/challenge3/docker/.env
+++ b/challenge3/docker/.env
@@ -3,11 +3,11 @@ DB_ROOT_PASSWORD=root
 DB_USERNAME=admin
 DB_PASSWORD=root
 DB_DATABASE=osdockerdb
-DB_HOST=localhost
+DB_HOST=db
 
 # Database config (for MariaDB)
 MYSQL_ROOT_PASSWORD=root
 MYSQL_DATABASE=osdockerdb
 MYSQL_USER=admin
 MYSQL_PASSWORD=root
-MYSQL_HOST=localhost
+MYSQL_HOST=db
