--- a/challenge4/docker/nginx/nginx.conf
+++ b/challenge4/docker/nginx/nginx.conf
@@ -1,6 +1,8 @@
 
 upstream loadbalancer {
-    server node-service:3000;
+    server node-service_1:3000;
+    server node-service_2:3000;
+    server node-service_3:3000;
 }
 
 server {
